--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1576,6 +1576,21 @@
       "console": "integratedTerminal",
     },
     {
+      "name": "eslint rule test @itwin/require-version-in-deprecation",
+      "presentation": {
+        "group": "6_Misc"
+      },
+      "cwd": "${workspaceFolder}/tools/eslint-plugin",
+      "type": "node",
+      "request": "launch",
+      "program": "${workspaceFolder}/tools/eslint-plugin/node_modules/mocha/bin/_mocha",
+      "args": [
+        "${workspaceFolder}/tools/eslint-plugin/tests/require-version-in-deprecation.js",
+        "--timeout 50000" // for easier debugging
+      ],
+      "console": "integratedTerminal",
+    },
+    {
       "name": "Extension API Generator",
       "cwd": "${workspaceFolder}/core/extension/",
       "type": "pwa-node",
