--- a/common/config/azure-pipelines/jobs/docs-build.yaml
+++ b/common/config/azure-pipelines/jobs/docs-build.yaml
@@ -35,9 +35,9 @@ jobs:
         clean: true
 
       - task: NodeTool@0
-        displayName: Use Node 14
+        displayName: Use Node 18
         inputs:
-          versionSpec: 14.17.4
+          versionSpec: 18.x
           checkLatest: true
 
       - script: |
@@ -72,7 +72,7 @@ jobs:
           useCurrentBisDocsArtifact: ${{ parameters.useCurrentBisDocsArtifact }}
 
       # Currently BeMetalsmith is an internal only tool
-      - script: npm install @bentley/bemetalsmith@4.3.x
+      - script: npm install @bentley/bemetalsmith@4.3.x --legacy-peer-deps
         displayName: Install BeMetalsmith
         workingDirectory: ${{ parameters.workingDir }}
 
