--- a/tools/eslint-plugin/package.json
+++ b/tools/eslint-plugin/package.json
@@ -52,7 +52,6 @@
     "@typescript-eslint/typescript-estree": "~4.31.0",
     "eslint": "^7.11.0",
     "mocha": "^10.0.0",
-    "typescript": "~4.4.0",
-    "@itwin/build-tools": "workspace:*"
+    "typescript": "~4.4.0"
   }
 }
